<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">


  <ImageView
      android:id="@+id/spaceStationIcon"
      android:contentDescription="@string/space_station_icon"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:layout_marginTop="32dp"
      android:src="@drawable/space_station_icon"
      app:layout_constraintBottom_toBottomOf="@+id/flightsIcon"
      app:layout_constraintEnd_toStartOf="@+id/flightsIcon"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintHorizontal_chainStyle="spread"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/flightsIcon"
      tools:layout_conversion_absoluteHeight="30dp"
      tools:layout_conversion_absoluteWidth="30dp" />

  <TextView
      android:id="@+id/spaceStationLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/space_stations"
      app:layout_constraintEnd_toEndOf="@+id/spaceStationIcon"
      app:layout_constraintStart_toStartOf="@+id/spaceStationIcon"
      app:layout_constraintTop_toBottomOf="@+id/spaceStationIcon"
      tools:layout_conversion_absoluteHeight="19dp"
      tools:layout_conversion_absoluteWidth="94dp" />

  <ImageView
      android:id="@+id/flightsIcon"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:src="@drawable/rocket_icon"
      app:layout_constraintBottom_toBottomOf="@+id/spaceStationIcon"
      app:layout_constraintEnd_toStartOf="@+id/roverIcon"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/spaceStationIcon"
      app:layout_constraintTop_toTopOf="@+id/spaceStationIcon"
      tools:layout_conversion_absoluteHeight="30dp"
      tools:layout_conversion_absoluteWidth="30dp" />

  <TextView
      android:id="@+id/flightsLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/flights"
      app:layout_constraintEnd_toEndOf="@+id/flightsIcon"
      app:layout_constraintStart_toStartOf="@+id/flightsIcon"
      app:layout_constraintTop_toBottomOf="@+id/flightsIcon"
      tools:layout_conversion_absoluteHeight="19dp"
      tools:layout_conversion_absoluteWidth="42dp" />

  <ImageView
      android:id="@+id/roverIcon"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:src="@drawable/rover_icon"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/flightsIcon"
      app:layout_constraintTop_toTopOf="@id/spaceStationIcon"
      tools:layout_conversion_absoluteHeight="30dp"
      tools:layout_conversion_absoluteWidth="30dp"
      tools:layout_editor_absoluteY="25dp" />

  <TextView
      android:id="@+id/roverLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/rovers"
      app:layout_constraintEnd_toEndOf="@+id/roverIcon"
      app:layout_constraintStart_toStartOf="@+id/roverIcon"
      app:layout_constraintTop_toBottomOf="@+id/roverIcon"
      tools:layout_conversion_absoluteHeight="19dp"
      tools:layout_conversion_absoluteWidth="43dp" />


  <TextView
      android:id="@+id/textView1"
      android:layout_width="124dp"
      android:layout_height="98dp"
      android:layout_marginRight="40dp"
      android:background="@color/colorPrimary"
      android:gravity="center"
      android:text="@string/dca"
      android:textColor="@android:color/white"
      app:layout_constraintBottom_toBottomOf="@id/doubleArrowsIcon"
      app:layout_constraintEnd_toEndOf="@+id/doubleArrowsIcon"
      app:layout_constraintTop_toTopOf="@id/doubleArrowsIcon"
      tools:layout_conversion_absoluteHeight="98dp"
      tools:layout_conversion_absoluteWidth="124dp"
      tools:layout_editor_absoluteY="167dp" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="124dp"
      android:layout_height="98dp"
      android:layout_marginLeft="40dp"
      android:background="@color/colorPrimary"
      android:gravity="center"
      android:paddingStart="20dp"
      android:text="@string/mars"
      android:textColor="@android:color/white"
      app:layout_constraintBottom_toBottomOf="@+id/doubleArrowsIcon"
      app:layout_constraintStart_toStartOf="@+id/doubleArrowsIcon"
      app:layout_constraintTop_toTopOf="@+id/doubleArrowsIcon"
      tools:layout_conversion_absoluteHeight="98dp"
      tools:layout_conversion_absoluteWidth="124dp" />

  <ImageView
      android:id="@+id/doubleArrowsIcon"
      android:layout_width="60dp"
      android:layout_height="60dp"
      android:layout_marginBottom="40dp"
      android:src="@drawable/double_arrows"
      app:layout_constraintBottom_toTopOf="@+id/guideline1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      tools:layout_conversion_absoluteHeight="60dp"
      tools:layout_conversion_absoluteWidth="60dp" />

  <Switch
      android:id="@+id/switch1"
      android:layout_width="160dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="200dp"
      android:background="@color/colorAccent"
      android:checked="false"
      android:padding="8dp"
      android:switchPadding="24dp"
      android:text="@string/one_way"
      android:textColor="@android:color/white"
      app:layout_constraintStart_toStartOf="@id/guideline2"
      app:layout_constraintTop_toTopOf="parent"
      tools:layout_conversion_absoluteHeight="35dp"
      tools:layout_conversion_absoluteWidth="160dp"
      tools:layout_editor_absoluteX="37dp"
      tools:layout_editor_absoluteY="291dp" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/colorAccent"
      android:padding="8dp"
      android:text="@string/traveller"
      android:textColor="@android:color/white"
      app:layout_constraintStart_toStartOf="@+id/guideline2"
      app:layout_constraintTop_toBottomOf="@+id/switch1"
      tools:layout_conversion_absoluteHeight="35dp"
      tools:layout_conversion_absoluteWidth="82dp" />


  <ImageView
      android:id="@+id/rocketIcon"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:src="@drawable/rocket_icon"
      app:layout_constraintCircle="@id/galaxyIcon"
      app:layout_constraintCircleAngle="270"
      app:layout_constraintCircleRadius="100dp"
      tools:ignore="MissingConstraints" />
  <ImageView
      android:id="@+id/galaxyIcon"
      android:layout_width="90dp"
      android:layout_height="10dp"
      android:src="@drawable/galaxy"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guideline1"
      tools:layout_conversion_absoluteHeight="90dp"
      tools:layout_conversion_absoluteWidth="90dp" />

  <Button
      android:id="@+id/departButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/depart"
      android:textColor="@android:color/white"
      app:backgroundTint="@color/colorPrimary"
      app:layout_constraintBottom_toBottomOf="parent"
      tools:layout_conversion_absoluteHeight="48dp"
      tools:layout_conversion_absoluteWidth="411dp"
      tools:layout_editor_absoluteX="174dp" />

  <android.support.constraint.Guideline
      android:id="@+id/guideline1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="0dp" />

  <android.support.constraint.Guideline
      android:id="@+id/guideline2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="20dp"
      app:layout_constraintGuide_percent="1" />


</android.support.constraint.ConstraintLayout>
